# dsp-doc

./: .gitignore  CMakeLists.txt  Failing-Tests.md  README.md
benchmarks/envelopes-peak-hold/: peak-hold.cpp
benchmarks/fft/: complex.cpp
benchmarks/fft/_previous/: signalsmith-fft-v1.h
cmake-helpers/: helpers.cmake
util/: console-colours.h
util/test/: main.cpp
